Added folders and working testfile in fxui