@@ -12,7 +12,7 @@
 
   <name>fxui</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <!-- <url>http://www.example.com</url> -->
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -27,15 +27,50 @@
       <artifactId>core</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>  
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-  </dependencies>
 
+
+
+        <!-- Test with TextFX -->
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>testfx-core</artifactId>
+			<version>4.0.16-alpha</version>
+			<scope>test</scope>
+		</dependency>
+    
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>testfx-junit5</artifactId>
+			<version>4.0.16-alpha</version>
+			<scope>test</scope>
+        </dependency>
+  </dependencies>
+  
   <build>
+  <plugins>
+      <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <configuration>
+          <skipTests>${skipUiTests}</skipTests>
+          <systemPropertyVariables>
+              <headless>${headlessTests}</headless>
+          </systemPropertyVariables>
+          <argLine>
+          --add-opens notpaint.ui/notpaint.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+          --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+          --add-exports javafx.graphics/com.sun.glass.ui.delegate=ALL-UNNAMED
+          </argLine>
+      </configuration>
+  </plugin>
+  </plugins>
   
   </build>
 </project>
